data/derived/sp14/progs/unify/prog2360.ml.out
Characters 4-5:
  f a x;;
      ^
Error: This expression has type int -> int
       but an expression was expected of type int
